--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -7,7 +7,7 @@
 			<h2>{{ video.title }}</h2>
 			<p>
 			{{ userlink(video, 'u_', true, 'btn-secondary') }}
-			<button class="btn btn-warning" type="button">{{ __("Subscribe") }}<</button>
+			<button class="btn btn-warning" type="button">{{ __("Subscribe") }}</button>
 			</p>
 				<div class="col-lg-9">
 					<div id="playerContainer"></div>
