--- a/templates/index.twig
+++ b/templates/index.twig
@@ -20,6 +20,8 @@
 				<li class="list-group-item" style="height: 1.19%;"><img class="float-start" style="max-width: 50%;" src="{{ profile_image(current_user.username) }}" alt="pfp">
 				<p class="text-end float-end">
 				<a href="settings.php">{{ __("Edit my profile") }}</a>
+				<br>
+				<a href="browse.php">{{ __("Browse") }}</a>
 				</p>
 				</li>
 				<li class="list-group-item">{{ __("From squareBracket") }}</li>
