--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -17,7 +17,16 @@
 		});
 	});
 </script>
-<textarea class="form-control" id="description" name="desc" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}"></textarea>
-<input type="color" class="form-control" id="color" value="">
-<button id="update" class="btn btn-primary">{{ __("Update") }}</button>
+<form action="settings.php" method="post">
+	<textarea class="form-control" id="description" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">
+		{{ current_user.description }}</textarea>
+	<select class="form-select" name="language">
+		{% for code,name in glob_languages %}
+			<option value="{{ code }}" {% if code == current_user.language %}selected{% endif %}>{{ name }}</option>
+		{% endfor %}
+	</select>
+	<input type="color" class="form-control" id="color" name="color" value="">
+	<input type="hidden" name="updatesettings" value="yes">
+	<input type="submit" class="btn btn-primary" name="action" value="{{ __("Update") }}">
+</form>
 	{% endblock %}
