--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -1,25 +1,10 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ __("User Settings") }}{% endblock%}
+{% block title %}{{ __("User Settings") }}{% endblock %}
+
 	{% block content %}
-<script>
-	$(document).ready(function(){
-		$("#update").click(function(){
-			$.post("settings.php",
-			{
-				description: $.trim($("#description").val()),
-				color: $.trim($("#color").val())
-			},
-			function(data,status){
-				if (status = "success") {
-				}
-			});
-		});
-	});
-</script>
 <form action="settings.php" method="post">
-	<textarea class="form-control" id="description" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">
-		{{ current_user.description }}</textarea>
+	<textarea class="form-control" id="description" name="description" maxlength="500" style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}">{{ current_user.description }}</textarea>
 	<select class="form-select" name="language">
 		{% for code,name in glob_languages %}
 			<option value="{{ code }}" {% if code == current_user.language %}selected{% endif %}>{{ name }}</option>
