--- a/templates/layout111-common/_layout.twig
+++ b/templates/layout111-common/_layout.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Title{% endblock %} - squareBracket</title>
-    <link rel="stylesheet" href="/vendor/npm-asset/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="/assets/project111/css/style.css">
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
@@ -48,7 +48,7 @@
 				About
 			  </a>
 			  <a class="navbar-item">
-				Jobs
+				Repository
 			  </a>
 			  <a class="navbar-item">
 				Contact
@@ -98,7 +98,7 @@
 	{% block content %}
 	{% endblock %}
 	<footer class="footer">
-	<h1 class="title">[111]</h1>
+	<h1 class="title">Project 111</h1>
 	<p>squareBracket Version {{ version }} · Instance running on Git commit: <a href="https://github.com/chazizgrkb/squarebracket/commit/{{ git_commit() }}">{{ git_commit() }}</a></p>
 	<p><b>By the squareBracket contributors</b> · 2020-{{ 'now' | date('Y') }} | <a href="/statistics.php">Statistics</a></p>
 	</footer>
