--- a/templates/sbnext-common/login.twig
+++ b/templates/sbnext-common/login.twig
@@ -14,12 +14,14 @@
 {% endif %}
 
 <div class="grid chazizPage">
-<img class="chazizgrkb" src="/assets/chazizgrkb/logo_account.png">
 <form method="post" name="loginForm" id="loginForm" action="login.php" class="form-signin">
+	<h2 class="form-signin-heading">{{ __("Sign in") }}</h2>
 	<input type="text" name="username" class="input-block-level" placeholder="{{ __("Username") }}">
 	<input type="password" name="password" class="input-block-level" placeholder="{{ __("Password") }}">
 	<br>
 	<input class="button button-large button-primary" type="submit" value="{{ __("Sign in") }}" name="loginsubmit">
+	<br>
+	<a href="https://stocksnap.io/photo/rain-drops-YYLGRHEGST">Photo</a> by <a href="https://stocksnap.io/author/minan">Min An</a> on <a href="https://stocksnap.io">StockSnap</a>
 </form>
 </div>
 	{% endblock %}
