--- a/templates/sbnext-common/register.twig
+++ b/templates/sbnext-common/register.twig
@@ -8,7 +8,6 @@
 	<div class="alert alert-warning" role="alert">{{ error }}</div>
 {% endif %}
 <div class="grid chazizPage">
-<img class="chazizgrkb" src="/assets/chazizgrkb/logo_account.png">
 <form method="post" name="loginForm" id="loginForm" action="register.php" class="form-signin">
 	<h2 class="form-signin-heading">{{ __("Register") }}</h2>
 
@@ -28,6 +27,8 @@
 
 	<br>
 	<input class="button button-large button-primary" type="submit" value="{{ __("Register") }}" name="registersubmit">
+	<br>
+	<a href="https://stocksnap.io/photo/rain-drops-YYLGRHEGST">Photo</a> by <a href="https://stocksnap.io/author/minan">Min An</a> on <a href="https://stocksnap.io">StockSnap</a>
 </form>
 </div>
 {% if hcaptcha_sitekey %}
